Fix horizontal scroll on mobile

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -28,6 +28,8 @@ body {
     color: white;
     font-family: Inter;
     user-select: none;
+    overflow-x: hidden;
+    width: 100%;
 }
 
 ::-webkit-scrollbar {
